# Angry-Birds-Replica

./: CMakeLists.txt  LICENSE  Meeting-notes.md  README.md
Backgrounds/: readme.md
Createdlevels/: createdlevel.csv  readme.md
Fonts/: readme.md
Levels/: level1.csv  level2.csv  level3.csv  readme.md
Pictures/: readme.md
Players/: readme.md
Sound/: readme.md
doc/: Doxyfile  readme.md
doc/html/: _g_u_i_8hpp_source.html  annotated.html  bird_8hpp_source.html  box_8hpp_source.html  class_bird-members.html  class_bird.html  class_bird__inherit__graph.md5  class_bird_a2c4a8a764c19bc962306f61611513d19_icgraph.md5  class_bird_a35ca30d85dea30e06663d909635d841d_icgraph.md5  class_bird_a5034da10c48bc73203b98fad523ed1a1_icgraph.md5  class_bird_a73496d28dde48f328c2cfc275ebcad6f_icgraph.md5  class_bird_ad378b78b7803914962c49cf7d0208fe4_cgraph.md5  class_bird_ad378b78b7803914962c49cf7d0208fe4_icgraph.md5  class_box-members.html  class_box.html  class_collision_detection-members.html  class_collision_detection.html  class_collision_detection__inherit__graph.md5  class_collision_detection_acd9c663aa934374a32fbab401b9feb3a_icgraph.md5  class_collision_detection_af49a49d278ff3fbe3b2e6285ae879d8d_cgraph.md5  (+74 more)
libs/: readme.md
plan/: readme.md
src/: GUI.cpp  GUI.hpp  bird.cpp  bird.hpp  box.cpp  box.hpp  collisiondetection.cpp  collisiondetection.hpp  game.cpp  game.hpp  level.cpp  level.hpp  leveleditor.cpp  leveleditor.hpp  main.cpp  pig.cpp  pig.hpp  player.cpp  player.hpp  readfile.cpp  readfile.hpp  readme.md  specialbird.cpp  specialbird.hpp  wall.cpp  wall.hpp
tests/: CMakeLists.txt  birdTest.hpp  boxTest.hpp  levelTest.hpp  mainTest.cpp  pigTest.hpp  playerTest.hpp  printer.hpp  readfileTest.hpp  readme.md  specialBirdTest.hpp  wallTest.hpp
(+118 files in other folders)
